--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
         <p>
             Classes will be held only on Saturday & Sunday from 2 PM - 4 PM.
         </p>
-
     </div>
+
+    <!-- hero image  -->
+    <img src="/Images/hero-image.png" alt="flate illustration of a web developer">
+    
+    <!-- Call to action  -->
+    <button>
+        Enroll now
+    </button>
 </body>
 </html>
